syntax = "proto3";

option java_multiple_files = true;
option java_package = "generated.grpc.smartlightning";
option java_outer_classname = "SmartLightingImpl";

package SmartLighting;

// Smart Home Lighting service
// Unary RPC
service SmartLighting {
  rpc TurnOnLight (LightRequest) returns (LightResponse);
  rpc TurnOffLight (LightRequest) returns (LightResponse);
}

// Define the message
message LightRequest {
  string room = 1;
}

message LightResponse {
  string status = 1;
}
   

